<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding">OnBoarding</string>
    <string name="instruction">Instruction</string>
    <string name="shoelist">Shoe List</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="login_header">Shoe Store</string>
    <string name="msg_gym">It\'s hard to get fit, but it is harder to look in the mirror and dislike what you see</string>
    <string name="msg_tennis">Keep calm and let the racket do the talking</string>
    <string name="msg_football">Playing football with your feet is one thing, but playing football with your heart is another</string>
    <string name="msg_basketball">Some people believe you win with your five best players, but I found out that you win with the five who fit together best</string>
    <string name="msg_instruction">Welcome to your shop manager account. Feel free to add, edit, delete your catalog offers</string>
    <string name="msg_instruction_two">Click Button to Proceed</string>
    <string name="proceed">Proceed</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_company">Shoe Brand</string>
    <string name="hint_size">Size</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="logout">Logout</string>
</resources>
