<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/to_onboarding"
            app:destination="@id/onboardingFragment" />

    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.udacity.shoestore.ui.onboarding.OnBoardingFragment"
        android:label="@string/onboarding"
        tools:layout="@layout/fragment_onboarding">

        <action
            android:id="@+id/to_instruction"
            app:destination="@id/instructionFragment" />
    </fragment>

    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.ui.instruction.InstructionFragment"
        android:label="@string/instruction"
        tools:layout="@layout/fragment_instruction">

        <action
            android:id="@+id/to_shoelist"
            app:destination="@id/shoeListFragment" />
    </fragment>

    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ui.shoelist.ShoeListFragment"
        android:label="@string/shoelist"
        tools:layout="@layout/fragment_shoelist" >

        <action
            android:id="@+id/to_shoeDetail"
            app:destination="@id/shoeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.ui.shoedetail.ShoeDetailFragment"
        android:label="@string/shoe_detail"
        tools:layout="@layout/fragment_shoedetail">
        <argument
            android:name="arg_shoe"
            app:argType="com.udacity.shoestore.data.model.Shoe" />
    </fragment>

</navigation>
