<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ncScroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.shoedetail.ShoeDetailFragment">

            <LinearLayout
                android:id="@+id/edit_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/viewA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:cardBackgroundColor="@android:color/white">

                    <ImageView
                        android:id="@+id/edit_shoe_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_basketball_shoe" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/viewB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingTop="10dp"
                        android:paddingRight="16dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_shoe_company"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_company"
                                android:text="@={viewModel.shoe.company}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_shoe_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_description"
                                android:text="@={viewModel.shoe.description}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_shoe_size"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_size"
                                android:text="@={viewModel.shoe.size}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_shoe_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_name"
                                android:text="@={viewModel.shoe.name}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="26dp"
                            android:layout_marginBottom="26dp"
                            android:orientation="horizontal"
                            android:layout_gravity="center">

                            <com.google.android.material.button.MaterialButton
                                style="@style/Widget.MaterialButtonStyle"
                                android:id="@+id/cancelButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:text="@string/action_cancel"
                                android:layout_weight="1"/>

                            <com.google.android.material.button.MaterialButton
                                android:layout_weight="1"
                                style="@style/Widget.MaterialButtonStyle"
                                android:id="@+id/saveButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:text="@string/action_save" />
                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.ui.shoedetail.ShoeDetailViewModel" />
    </data>

</layout>